Sign Up Test Case completion along with reports and snapshots.

--- a/Framework/Configuration/config.properties
+++ b/Framework/Configuration/config.properties
@@ -2,4 +2,4 @@ browser=chrome
 baseURL=https://www.instacei.com
 errorMsg=Email Not Found
 landingHeading=My Projects
-SignUpMessage=text
+SignUpMessage=Your account has been created successfully. We have sent an email to you to verify your email address.
